...
    <!--These strings are for the record, now maps, activity-->
    <string name="activity_maps_navigation_record_button">Record</string>
    <string name="activity_maps_navigation_pause_button">Pause</string>
    <string name="activity_maps_firebase">recorded_workouts/%s</string>
    <string name="activity_maps_firebase_user_locs">user_locations</string>
    <string name="activity_maps_save_dialog">Do you want to save this workout?</string>
    <string name="activity_maps_yes">Yes</string>
    <string name="activity_maps_no">No</string>

    <string name="logout_while_offline_warning">You have locally saved data.</string>
    <string name="logout_while_offline_warning_save">Save and quit</string>
    <string name="logout_while_offline_warning_quit">Quit</string>
    <string name="submitChanges">Submit Changes</string>

...
        <item>Walk</item>
        <item>Weight</item>
        <item>Wheelchair</item>
    </string-array>

    <!-- Search Results -->
    <string name="apply">Apply</string>

    <!-- Team menu options -->
    <string name="action_join_team">Join a team</string>
    <string name="action_create_team">Create a team</string>
    <string name="search_team_name_hint">Enter team name...</string>

    <!-- Team details menu options -->
    <string name="action_transfer_ownership">Transfer Ownership</string>
    <string name="action_invite_user">Invite new member</string>
    <string name="action_edit_team">Edit team</string>
    <string name="your_team_name">Your Team Name</string>
    <string name="your_team_motto">Your team motto</string>
    <string name="team_members">Team Members</string>
    <string name="name">Name</string>
    <string name="last_online">last online:</string>
    <string name="search_for_team_members_hint">Search other users</string>
    <string name="action_quit_team">Quit team</string>
    <string name="search_results">Search Results</string>
    <string name="hint_login_enter_username">Enter username...</string>
    <string name="hint_login_enter_password">Enter password...</string>
    <string name="appName">AtheleteMonitor</string>
    <string name="content_desc_dal_logo">Dalhousie University</string>
    <string name="register_account">Create Account</string>
...
